@@ -1,0 +1,12 @@
+               |-----handy-ruler------------------------------------------------------|
+libmusicbrainz3: libmusicbrainz3 (MusicBrainz 3 Library)
+libmusicbrainz3: 
+libmusicbrainz3: The libmusicbrainz (also known as mb_client or MusicBrainz Client
+libmusicbrainz3: Library) is a development library geared towards developers who wish
+libmusicbrainz3: to add MusicBrainz lookup capabilities to their applications.
+libmusicbrainz3:
+libmusicbrainz3: 
+libmusicbrainz3:
+libmusicbrainz3:
+libmusicbrainz3:
+libmusicbrainz3: Package created by Niki Kovacs <info@microlinux.fr>
