@@ -1,0 +1,1 @@
+Apache_OpenOffice_*_Linux_x86*_langpack-rpm_*.tar.gz
