@@ -1,0 +1,1 @@
+d5863584ce00abbcfe7d8fee6419d7b2  Apache_OpenOffice_4.0.1_Linux_x86-64_langpack-rpm_fr.tar.gz
