@@ -1,0 +1,1 @@
+bf6b1e8d9041aad031708b3cbf536ccf  Apache_OpenOffice_4.0.1_Linux_x86_langpack-rpm_de.tar.gz
