@@ -1,0 +1,1 @@
+bd828374f2af6af5b18300ac177bd374  Apache_OpenOffice_4.0.1_Linux_x86_langpack-rpm_fr.tar.gz
