@@ -1,0 +1,12 @@
+                      |-----handy-ruler------------------------------------------------------|
+openoffice-langpack-de: openoffice-langpack-de (german language pack for Open Office)
+openoffice-langpack-de: 
+openoffice-langpack-de: German language pack for Open Office.
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: 
+openoffice-langpack-de: Package created by Niki Kovacs <info@microlinux.fr> 
