@@ -1,0 +1,12 @@
+                      |-----handy-ruler------------------------------------------------------|
+openoffice-langpack-fr: openoffice-langpack-fr (french language pack for Open Office)
+openoffice-langpack-fr: 
+openoffice-langpack-fr: French language pack for Open Office.
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: 
+openoffice-langpack-fr: Package created by Niki Kovacs <info@microlinux.fr> 
