@@ -1,3 +1,9 @@
+Tue Nov 19 05:50:42 CET 2013
+libmusicbrainz3-3.0.3-i486-2_microlinux.txz: Added.
+openoffice-4.0.1_en_US-i586-2_microlinux.txz: Added.
+openoffice-langpack-de-4.0.1-i486-1_microlinux.txz: Added.
+openoffice-langpack-fr-4.0.1-i486-1_microlinux.txz: Added.
++---------------------------+
 Sun Nov 17 06:45:58 CET 2013
 google-droid-fonts-20100409-noarch-2_microlinux.txz: Added.
 webcore-fonts-3.0-noarch-4_microlinux.txz: Added.
